fix: alignment of elements in a comment

--- a/app/assets/stylesheets/commontator.scss
+++ b/app/assets/stylesheets/commontator.scss
@@ -10,7 +10,7 @@
 .actions {
   display: block;
   margin-top: 10px;
-  min-width: 200px;
+  min-width: 150px;
   text-align: right;
 }
 
