--- a/app/assets/stylesheets/commontator/application.scss
+++ b/app/assets/stylesheets/commontator/application.scss
@@ -17,9 +17,9 @@
   }
 
   .actions {
-    float: right;
-
-    margin-left: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
 
   .status {
